--- a/01-appnotes/index.html
+++ b/01-appnotes/index.html
@@ -1,59 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AppNotes - Crea, etiqueta, elimina y organiza tus notas</title>
-    <link rel="icon" href="/favicon.webp" type="image/webp" />
-    <meta
-      name="description"
-      content="AppNotes, una aplicación simple para tomar y organizar tus notas, con opciones para etiquetar y buscar."
-    />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
-    <script src="/main.js" type="module"></script>
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__box box">
-        <nav class="header__nav nav">
-          <a class="nav__link link" href="#">
-            <img
-              class="nav__link__icon"
-              src="/favicon.webp"
-              alt="Icono de AppNotes"
-            />
-            <h1 class="nav__link__title title">AppNotes</h1>
-          </a>
-        </nav>
-      </div>
-    </header>
-    <main class="main">
-      <section class="main__hero hero">
-        <div class="hero__box box">
-          <div class="hero__intro">
-            <button class="hero__intro__button button">
-              <svg
-                width="50"
-                height="50"
-                viewBox="0 0 16 16"
-                fill="currentColor"
-                x="190"
-                y="190"
-                role="img"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g fill="currentColor">
-                  <path
-                    fill="currentColor"
-                    d="M2 8a6 6 0 1 1 12 0A6 6 0 0 1 2 8Zm6-3a.5.5 0 0 0-.5.5v2h-2a.5.5 0 0 0 0 1h2v2a.5.5 0 0 0 1 0v-2h2a.5.5 0 0 0 0-1h-2v-2A.5.5 0 0 0 8 5Z"
-                  />
-                </g>
-              </svg>
-              <h2 class="hero__intro__title title">Crea tu primera nota</h2>
-            </button>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>AppNotes - Crea, etiqueta, elimina y organiza tus notas</title>
+        <link rel="icon" href="/favicon.webp" type="image/webp" />
+        <meta name="description" content="AppNotes, una aplicación simple para tomar y organizar tus notas, con opciones para etiquetar y buscar." />
+        <link href="/style.css" rel="stylesheet" type="text/css" />
+        <script src="/main.js" type="module"></script>
+    </head>
+    <body>
+        <header class="header">
+            <div class="header__box box">
+                <nav class="header__nav nav">
+                    <a class="nav__link link" href="#">
+                        <img class="nav__link__icon" src="/favicon.webp" alt="Icono de AppNotes" />
+                        <h1 class="nav__link__title title">AppNotes</h1>
+                    </a>
+                </nav>
+            </div>
+        </header>
+        <main class="main">
+            <section class="main__hero hero">
+                <div class="hero__box box">
+                    <div class="hero__intro">
+                        <button class="hero__intro__button button">
+                            <svg width="50" height="50" viewBox="0 0 16 16" fill="currentColor" x="190" y="190" role="img" xmlns="http://www.w3.org/2000/svg">
+                                <g fill="currentColor">
+                                    <path
+                                        fill="currentColor"
+                                        d="M2 8a6 6 0 1 1 12 0A6 6 0 0 1 2 8Zm6-3a.5.5 0 0 0-.5.5v2h-2a.5.5 0 0 0 0 1h2v2a.5.5 0 0 0 1 0v-2h2a.5.5 0 0 0 0-1h-2v-2A.5.5 0 0 0 8 5Z"
+                                    />
+                                </g>
+                            </svg>
+                            <h2 class="hero__intro__title title">Crea tu primera nota</h2>
+                        </button>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
