Update note style

--- a/01-appnotes/index.html
+++ b/01-appnotes/index.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         <main class="main">
-            <section class="main__hero hero">
+            <section class="main__hero hero" style="display: none">
                 <div class="hero__box box">
                     <div class="hero__intro">
                         <button class="hero__intro__button button">
@@ -36,6 +36,46 @@
                             <h2 class="hero__intro__title title">Crea tu primera nota</h2>
                         </button>
                     </div>
+                </div>
+            </section>
+            <section class="main__notes notes">
+                <div class="notes__box box">
+                    <ul class="notes__list list">
+                        <li class="list__note note">
+                            <button class="note__action note__button button">
+                                <article class="note__article">
+                                    <header class="note__header">
+                                        <h3 class="note__title title">El día de hoy...</h3>
+                                    </header>
+                                    <section class="note__section">
+                                        <p class="note__description">
+                                            Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y
+                                            muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día
+                                            increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está
+                                            siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es
+                                            que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La
+                                            verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro
+                                            llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con
+                                            mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a
+                                            pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego
+                                            me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma
+                                            increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi
+                                            de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la
+                                            mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy
+                                            bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día increíble y muy
+                                            bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está siendo un día
+                                            increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es que está
+                                            siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La verdad es
+                                            que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro llamado Oso. La
+                                            verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con mi perro
+                                            llamado Oso. La verdad es que está siendo un día increíble y muy bonito.Desperté muy bien en la mañana, dormi de forma increíble y luego me fui a pasear con
+                                            mi perro llamado Oso. La verdad es que está siendo un día increíble y muy bonito.
+                                        </p>
+                                    </section>
+                                </article>
+                            </button>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
