Fix replace word ("editar" to "actualizar")

--- a/01-appnotes/index.html
+++ b/01-appnotes/index.html
@@ -84,7 +84,7 @@
                                     Contenido
                                     <textarea class="createnote__textarea" autocomplete="off" placeholder="Escribe aquí el contenido de tu nota" name="content" required></textarea>
                                 </label>
-                                <button class="createnote__submit createnote__submit--edit createnote__submit--disabled createnote__button button" type="button">Editar nota</button>
+                                <button class="createnote__submit createnote__submit--edit createnote__submit--disabled createnote__button button" type="button">Actualizar nota</button>
                                 <button class="createnote__submit createnote__submit--create createnote__button button" type="submit">Guardar nota</button>
                             </form>
                         </div>
