--- a/02-escala-de-notas/index.html
+++ b/02-escala-de-notas/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Escala tus notas, calcula tus promedios y sigue tu progreso académico" />
         <script type="module" src="/src/main.jsx"></script>
     </head>
-    <body class="font-system font-normal text-lg bg-slate-950 text-purple-100">
+    <body class="font-system font-normal text-lg bg-slate-950 text-slate-100">
         <div id="root"></div>
     </body>
 </html>
