Add base design

--- a/07-tesla-clone/index.html
+++ b/07-tesla-clone/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Página clon de tesla para fines educativos" />
         <script type="module" src="/src/main.jsx"></script>
     </head>
-    <body class="font-system font-medium text-sm bg-white">
+    <body class="font-universal-sans font-medium text-sm bg-white text-white">
         <div id="root"></div>
     </body>
 </html>
