--- a/07-tesla-clone/index.html
+++ b/07-tesla-clone/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/ico" href="/favicon.ico" />
+        <link rel="icon" type="image/webp" href="/favicon.webp" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vehículos eléctricos, energía solar y limpia | Tesla"</title>
         <meta name="description" content="Página clon de tesla para fines educativos" />
