--- a/08-units/index.html
+++ b/08-units/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/webp" href="/favicon.webp" />
         <title>Units - Conversor de Unidades</title>
+        <link rel="icon" href="/favicon.webp" type="image/webp" />
         <meta name="description" content="Units te permite convertir unidades entre diversas medida" />
         <link rel="stylesheet" href="./ouput/styles.css" />
         <script type="module" src="/src/main.jsx"></script>
